--- a/templates/front_end.html
+++ b/templates/front_end.html
@@ -8,20 +8,38 @@
 <body>
     <script type="text/javascript" charset="utf-8">
         $(document).ready(function(){
+            var isBusy = false;
             var socket = io.connect("http://localhost:5000/");
-    
+            
+            //Connect to server
             socket.on("connect", function(){
                 socket.emit("connection", "User Connected!");
             });
 
+            //Receive work from server
             socket.on("payload_in", function(pl){
                 //call hashing function/check hash/update count
-                
+                if (isBusy == false){
+                    isBusy == True;
+                    decodeMess(pl);
+                }
+            });
+            
+            //Click to start calculating proof-of-work
+            $("#start").on("click", function(){
+                socket.emit("payload", "open");
             });
 
-            $("#start").on("click", function(){
-                socket.emit("payload", );
-            });
+            //Write decode message function
+            function decodeMess(msg){
+                var split_msg = msg.split('-');
+                document.write(split_msg);
+                var start_hash = parseInt(split_msg[0]);
+                var end_hash = parseInt(split_msg[1]);
+                var target = parseInt(split_msg[2]);
+                var base_str = split_msg[3];
+                return start_hash, end_hash, target, base_str
+            }
     });
     </script>
     <button id="start">Start Mining</button>
